kubernetes/overlays/demo/service-api-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sai-api
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
