kubernetes/overlays/demo/service-web-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sai-web
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
